# recode_smocs

./: .gitignore  ERA5_processing.ipynb  JOANNE_processing.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  runtime.txt
.github/workflows/: condaenv.yml  pip.yml
src/: analysis.py  plotting_functions.py
