[tool.poetry]
name = "recode_smocs"
version = "0.1.0"
description = "A repository to hold code that generates plots and does analysis for the SMOCs manuscript"
authors = ["Geet George <geet.george@mpimet.mpg.de>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
